# pico-template

./: .gdbinit  .gitignore  .gitmodules  .pre-commit-config.yaml  .vimspector.json  CMakeLists.txt  Cargo.toml  README.md  Taskfile.yml  build.rs  flake.nix  pico.yml  pyproject.toml
.cargo/: config.toml
.claude/: settings.local.json
cmake/: ProjectSettings.cmake
data/config/: config.cue
data/linker/: memory-pico2.x
model/: button.sysml  control.sysml  maintenance.sysml
src/: CMakeLists.txt  button_hw.rs  control_hw.rs  generated.rs  lib.rs  main.cpp  main.rs  maintenance_hw.rs  messages.rs
tests/: README.md  integration.rs
tools/: sysml_codegen.py
