[package]
name = "pico-template"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "external/base", default-features = false }
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3" }
embassy-sync = { version = "0.6" }
embassy-rp = { version = "0.2", features = ["time-driver"] }
embassy-usb = { version = "0.3", optional = true }

embedded-hal = "1.0"
embedded-hal-async = "1.0"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
critical-section = "1.1"
atomic-polyfill = "1.0"
rp2040-boot2 = "0.3"

serde = { version = "1.0", default-features = false, features = ["derive"] }
heapless = "0.8"
portable-atomic = { version = "1.12", features = ["critical-section"] }
static_cell = "2.1"

# Ferrous Systems / Knurling-rs crates
postcard = { version = "1.0", default-features = false }

[dev-dependencies]
defmt-test = "0.3"

[[test]]
name = "integration"
harness = false

[build-dependencies]
serde_json = "1.0"
flip-link = "0.1"

[features]
default = ["pico1"]
pico1 = []
pico2 = []
usb = ["embassy-usb"]

[[bin]]
name = "pico-template"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = true

[profile.test]
opt-level = "s"
debug = true
